java_binary(
    name = "Lox",
    srcs = glob(["src/com/craftinginterpreters/lox/*.java"]),
    main_class = "com.craftinginterpreters.lox.Lox",
)

java_binary(
    name = "generate_ast",
    srcs = ["src/com/craftinginterpreters/tool/GenerateAst.java"],
    main_class = "com.craftinginterpreters.tool.GenerateAst",
)
